# fastapi-cicd-k8s

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  deployment.yml  pyproject.toml  requirements.txt
.github/workflows/: action.yml  action_dev.yml  action_stg.yml
app/: api.py  config.py
app/routes/v1/: fruit.py
app/services/: __init__.py  fruit_service.py
fastapi_cicd_demo/: api.py  config.py
fastapi_cicd_demo/routes/v1/: demo.py
fastapi_cicd_demo/services/: __init__.py  demo_service.py
tests/: test_demo_service.py  test_fruit_service.py
